[package]
name = "setback"
version = "0.1.0"
edition = "2024"
build = "build.rs"
description = "no_std setjmp/longjmp-based failure recovery confined to C frames"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[dependencies]
critical-section = "1.2"

[features]
default = []
std = ["critical-section/std"]

[build-dependencies]
cc = "1"
